--- a/package.json
+++ b/package.json
@@ -10,11 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
     "@hookform/resolvers": "^3.3.4",
     "@mui/base": "^5.0.0-beta.40",
-    "@mui/material": "^5.15.15",
     "antd": "^5.16.2",
     "axios": "^1.6.8",
     "dayjs": "^1.11.10",
@@ -23,7 +20,7 @@
     "react-aria-components": "^1.1.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.3",
-    "tailwindcss-react-aria-components": "^1.1.2-nightly.4518",
+    "react-mobile-picker": "^1.0.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
